fix broken design

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>sample</title>
+  <title>horizontal scroll demo</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./vendor/font-awesome.min.css">
 </head>
 <body>
   <section class="wrap">
-    <h1>code samples</h1>
+    <div class="page_title">
+      <h1>code samples</h1>
+      <a href="https://github.com/sottar/horizontal_scroll_demo" class="github" target="_blank">
+        <i class="fa fa-github" aria-hidden="true"></i>
+      </a>
+    </div>
     <section class="block" id="sample_flex">
       <h2 class="title">sample01</h2>
       <p class="description">display: flex を使用</p>
