--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li class="item"><a href="#">item10</a></li>
       </ul>
       <div class="code">
-        <a href="https://github.com/sottar/horizontal_scroll_demo/blob/master/parts/_sample_flex.scss" target="_blank">show code</a>
+        <a href="https://github.com/sottar/horizontal_scroll_demo/blob/master/parts/_sample_flex.scss" target="_blank">view code</a>
       </div>
     </section>
     <section class="block" id="sample_table-cell">
@@ -49,7 +49,7 @@
         <li class="item"><a href="#">item10</a></li>
       </ul>
       <div class="code">
-        <a href="https://github.com/sottar/horizontal_scroll_demo/blob/master/parts/_sample_table-cell.scss" target="_blank">show code</a>
+        <a href="https://github.com/sottar/horizontal_scroll_demo/blob/master/parts/_sample_table-cell.scss" target="_blank">view code</a>
       </div>
     </section>
     <section class="block" id="sample_inline-block">
@@ -68,7 +68,7 @@
         <li class="item"><a href="#">item10</a></li>
       </ul>
       <div class="code">
-        <a href="https://github.com/sottar/horizontal_scroll_demo/blob/master/parts/_sample_inline-block.scss" target="_blank">show code</a>
+        <a href="https://github.com/sottar/horizontal_scroll_demo/blob/master/parts/_sample_inline-block.scss" target="_blank">view code</a>
       </div>
     </section>
     <div class="github"><a href=""></a></div>
